force-app/main/default/objects/WhatsApp_Message__c/WhatsApp_Message__c.object-meta.xml
<CustomObject>
    <description>This Object stores message records that are related to a paticular WhatsApp_Contact__c Record</description>
    <label>WhatsApp Message</label>
    <nameField>
        <displayFormat>MSG-{00000}</displayFormat>
        <label>WhatsApp Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>