force-app/main/default/objects/WhatsApp_Message__c/fields/File_Size_kb__c.field-meta.xml
<CustomField>
    <fullName>File_Size_kb__c</fullName>
    <label>File Size(kb)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>