force-app/main/default/objects/WhatsApp_Message__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>