force-app/main/default/objects/WhatsApp_Message__c/fields/Thumbnail_Url__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Url__c</fullName>
    <label>Thumbnail Url</label>
    <type>Url</type>
</CustomField>