force-app/main/default/objects/WhatsApp_Message__c/fields/WhatsApp_Contact__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Contact__c</fullName>
    <label>WhatsApp Contact</label>
    <referenceTo>WhatsApp_Contact__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>