force-app/main/default/objects/WhatsApp_Message__c/fields/WhatsApp_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Message_Id__c</fullName>
    <description>Store WhatsApp Message Id from the API</description>
    <externalId>true</externalId>
    <label>WhatsApp Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>